--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=7.1",
     "web3p/web3.php": "^0.2",
-    "web3p/ethereum-util": "0.1.4",
+    "sasou/ethereum-util": "^1.0",
     "kornrunner/ethereum-offline-raw-tx": "0.6.0"
   }
 }
